--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <div class="container__caixa">
              <h1 class="container__titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
-             <img src="Combo.png" alt="o alura como é altuma junção do alura + com o alura linguas" class="container__imagem">
+             <img src="img/Combo.png" alt="o alura como é altuma junção do alura + com o alura linguas" class="container__imagem">
              <a href="https://www.alura.com.br/" class="container__botao"> Assine por 12x de R$ 120,00 *</a>
              <a href="https://www.alura.com.br/" class="container__botao botao_secundario"> Assinar somente o Alura +</a>
              <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
@@ -61,6 +61,31 @@
     </li> 
    </ul>
 </section>
-
+<footer class="rodape">
+    <img src="Logo.png" alt="ALURA +"class="rodape__logo">
+    <ul class="rodape__lista">
+         <li class="lista __link">
+             <a href="#">idioma </a>
+         </li>
+         <li class="lista __link">
+            <a href="#">Dispositivos compativeis </a>
+         </li>
+         <li class="lista __link">
+            <a href="#"> Contrato de assinatura </a>
+         </li>
+         <li  class="lista __link">
+            <a href="#">Politica de privacidade</a>
+         </li>
+         <li class="lista __link">
+            <a href="#">Proteção de dados no brasil</a>
+         </li>
+         <li class="lista __link">
+            <a href="#">Anuncios personalidados</a>
+         </li>
+         <li class="lista __link">
+            <a href="#"> Ajuda</a>
+         </li>
+   </ul> 
+</footer>
 </body>
 </html>
