--- a/index.html
+++ b/index.html
@@ -62,30 +62,30 @@
    </ul>
 </section>
 <footer class="rodape">
-    <img src="Logo.png" alt="ALURA +"class="rodape__logo">
+    <img src="Logo.png" alt="Alura+" class="rodape__logo">
     <ul class="rodape__lista">
-         <li class="lista __link">
-             <a href="#">idioma </a>
-         </li>
-         <li class="lista __link">
-            <a href="#">Dispositivos compativeis </a>
-         </li>
-         <li class="lista __link">
-            <a href="#"> Contrato de assinatura </a>
-         </li>
-         <li  class="lista __link">
+        <li class="lista__link">
+            <a href="#">Idioma</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Dispositivos compatíveis</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Contrato de assinatura</a>
+        </li>
+        <li class="lista__link">
             <a href="#">Politica de privacidade</a>
-         </li>
-         <li class="lista __link">
-            <a href="#">Proteção de dados no brasil</a>
-         </li>
-         <li class="lista __link">
-            <a href="#">Anuncios personalidados</a>
-         </li>
-         <li class="lista __link">
-            <a href="#"> Ajuda</a>
-         </li>
-   </ul> 
+        </li>
+        <li class="lista__link">
+            <a href="#">Proteção de dados no Brasil</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Anuncios personalizados</a>
+        </li>
+        <li class="lista__link">
+            <a href="#">Ajuda</a>
+        </li>
+    </ul>
 </footer>
 </body>
 </html>
